# IMAGE_PROC_DEMO

./: CMakeLists.txt  README.md  autorun.bat  autorun.sh  note.txt
include/: GreyScaleImage.h  GreyScaleImage.hpp  ImageAnalyzer.h  ImageBase.hpp  ImageReader.hpp  ImageReceiver.hpp  LaneAnalyzer.h  Types.h
include/BmpReader/: BmpReader.h  BmpReader.hpp  FileReader.h  FileReader.hpp  FileReaderInstance.h  FileReaderInstance.hpp
src/: GrayScaleImage.cpp  ImageAnalyzer.cpp  LaneAnalyzer.cpp  main.cpp
src/BmpReader/: BmpReader.cpp  FileReader.cpp  FileReaderInstance.cpp
